# rust_todo

./: .env  Cargo.toml  build.rs
migrations/2018-11-01-153321_create_todos/: up.sql
src/: main.rs  schema.rs
static/: style.css
templates/: base.html  index.html
