[package]
name = "todo-app"
version = "0.1.0"
authors = ["t0yohei <inuneko690121@gmail.com>"]

[dependencies]
log = "0.4.6"
env_logger = "0.5.13"
dotenv = "0.13.0"
serde = "1.0.18"
serde_derive = "1.0.80"
serde_json = "1.0.32"
actix-web = "0.7.13"
askama = { version = "0.7.2", features = ["with-actix-web"] }
chrono = "0.4.6"
diesel = { version = "1.3.3", features = ["postgres"] }

[build-dependencies]
askama = "0.7.2"
